Replaced deprecated methods
Signed-off-by: Aurélien Pupier <apupier@ibm.com>